--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vst2-sdk-for-vst3sdk"]
 	path = vst2-sdk-for-vst3sdk
 	url = https://github.com/Do-sth-sharp/vst2-sdk-for-vst3sdk.git
+[submodule "libDMDA"]
+	path = libDMDA
+	url = https://github.com/Do-sth-sharp/libDMDA.git
