--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,3 @@
-[submodule "JUCE"]
-	path = JUCE
-	url = https://github.com/juce-framework/JUCE.git
-[submodule "vst3sdk"]
-	path = vst3sdk
-	url = https://github.com/steinbergmedia/vst3sdk.git
-[submodule "vst2-sdk-for-vst3sdk"]
-	path = vst2-sdk-for-vst3sdk
-	url = https://github.com/Do-sth-sharp/vst2-sdk-for-vst3sdk.git
-[submodule "libDMDA"]
-	path = libDMDA
-	url = https://github.com/Do-sth-sharp/libDMDA.git
+[submodule "juce-vst3-dev-kit"]
+	path = juce-vst3-dev-kit
+	url = https://github.com/Do-sth-sharp/juce-vst3-dev-kit
