--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,7 +169,7 @@ else (NOT MSVC)
 endif (NOT MSVC)
 
 # =============================================
-# Target
+# Install
 # =============================================
 include(GNUInstallDirs)
 include(CMakePackageConfigHelpers)
