Add ARA document sync

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,18 +32,18 @@ set (JucePlugin_WantsMidiInput ON)
 set (JucePlugin_ProducesMidiOutput OFF)
 set (JucePlugin_EditorRequiresKeyboardFocus ON)
 set (JucePlugin_Vst3Category "Instrument|Generator|Synth")
-set (JucePlugin_CFBundleIdentifier "com.organ.project.plugin")
+set (JucePlugin_CFBundleIdentifier "org.VocalSharp.VocalShaper.SynthEngineDemo")
 set (JucePlugin_VSTNumMidiInputs "16")
 set (JucePlugin_VSTNumMidiOutputs "0")
-set (JucePlugin_MaxNumInputChannels "0")
-set (JucePlugin_MaxNumOutputChannels "1")
-set (JucePlugin_PreferredChannelConfigurations "{0, 1}")
+set (JucePlugin_MaxNumInputChannels "2")
+set (JucePlugin_MaxNumOutputChannels "2")
+set (JucePlugin_PreferredChannelConfigurations "{0, 1}, {0, 2}, {1, 1}, {1, 2}, {2, 1}, {2, 2}")
 set (JucePlugin_Enable_ARA ON)
-set (JucePlugin_ARACompatibleArchiveIDs "")
-set (JucePlugin_ARAContentTypes "0x00")
+set (JucePlugin_ARACompatibleArchiveIDs "org.VocalSharp.VocalShaper.SynthEngineDemo")
+set (JucePlugin_ARAContentTypes "0x01")
 set (JucePlugin_ARATransformationFlags "0x00")
-set (JucePlugin_ARAFactoryID "")
-set (JucePlugin_ARADocumentArchiveID "")
+set (JucePlugin_ARAFactoryID "org.VocalSharp.VocalShaper.SynthEngineDemo")
+set (JucePlugin_ARADocumentArchiveID "org.VocalSharp.VocalShaper.SynthEngineDemo")
 
 add_subdirectory (juce-vst3-dev-kit)
 
