Fixed install destination

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,6 +188,8 @@ set (ENGINE_CMAKE_CONFIG_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${ENGINE_INST
 install (TARGETS SynthEngineDemo
 	EXPORT ${ENGINE_INSTALL_NAME}Targets
 	RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" OPTIONAL
+	LIBRARY DESTINATION "${CMAKE_INSTALL_BINDIR}" OPTIONAL
+	ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}" OPTIONAL
 )
 
 if (MSVC)
