Fixed install path to tools dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,14 +185,20 @@ set (ENGINE_INSTALL_NAME ${PROJECT_NAME})
 
 set (ENGINE_CMAKE_CONFIG_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/cmake/${ENGINE_INSTALL_NAME})
 
+if (SYNTH_ENGINE_DEMO_VCPKG_TOOLS_HINT)
+	set(TOOLS_DIR tools/${ENGINE_INSTALL_NAME})
+else ()
+	set(TOOLS_DIR ${CMAKE_INSTALL_BINDIR})
+endif ()
+
 install (TARGETS SynthEngineDemo
 	EXPORT ${ENGINE_INSTALL_NAME}Targets
-	RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" OPTIONAL
-	LIBRARY DESTINATION "${CMAKE_INSTALL_BINDIR}" OPTIONAL
+	RUNTIME DESTINATION "${TOOLS_DIR}" OPTIONAL
+	LIBRARY DESTINATION "${TOOLS_DIR}" OPTIONAL
 )
 
 if (MSVC)
-	install (FILES $<TARGET_PDB_FILE:SynthEngineDemo> DESTINATION "${CMAKE_INSTALL_BINDIR}" OPTIONAL)
+	install (FILES $<TARGET_PDB_FILE:SynthEngineDemo> DESTINATION "${TOOLS_DIR}" OPTIONAL)
 endif (MSVC)
 
 write_basic_package_version_file (
